test/fails/bad_tags/mult7.lgl
tag a is vec<2>;
tag b is vec<3>;
tag c is b;
tag d is b;

void main() {
    b y = [2., 1., 2.];

    b->c b_c = [[1., 1., 1.], [1., 1., 1.], [1., 1., 1.]];
    b->d b_d = [[1., -1., 1.], [-1., 1., 1.], [1., 1., -1.]];

    vec3 fail = (b_c + b_d) * y; // No upcast to top after transformation
}